# evalf

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
evalf/: __init__.py  __main__.py  cli.py  evaluation.py  executor.py  inputs.py  prompt_builder.py  reporting.py  schemas.py  settings.py  utils.py
evalf/llms/: __init__.py  base.py  client.py  factory.py  pricing.py  providers.py
evalf/metrics/: __init__.py  base.py  decomposition.py  registry.py
evalf/metrics/answer_correctness/: __init__.py  metric.py  prompt.py  schema.py
evalf/metrics/answer_relevance/: __init__.py  metric.py  prompt.py  schema.py
evalf/metrics/c4/: __init__.py  metric.py  prompt.py  schema.py
evalf/metrics/context_coverage/: __init__.py  metric.py  prompt.py  schema.py
evalf/metrics/context_precision/: __init__.py  metric.py  prompt.py  schema.py
evalf/metrics/context_recall/: __init__.py  metric.py  prompt.py  schema.py
evalf/metrics/context_relevance/: __init__.py  metric.py  prompt.py  schema.py
evalf/metrics/faithfulness/: __init__.py  metric.py  prompt.py  schema.py
examples/: rag_eval.jsonl  rag_eval_attempts.json  rag_eval_mixed.jsonl
notebooks/: 01_llms.ipynb  02_metrics.ipynb  03_evaluate_file.ipynb  04_custom_metrics.ipynb  05_cli_guide.ipynb
tests/: helpers.py  llms_helpers.py
tests/integration/: test_evaluate_pipeline.py  test_llms_metrics.py  test_metrics_pipeline.py
tests/smoke/: test_cli_smoke.py  test_entrypoint_smoke.py  test_evaluate_smoke.py
tests/unit/: test_evaluator.py  test_executor_evaluation.py  test_inputs.py  test_main_module.py  test_package_metadata.py  test_prompts.py  test_reporting.py  test_settings.py  test_utils.py
tests/unit/cli/: test_cli.py
tests/unit/llms/: test_base.py  test_client.py  test_factory.py  test_pricing.py  test_providers.py
tests/unit/metrics/: test_answer_correctness_metric.py  test_answer_relevance_metric.py  test_c4_metric.py  test_context_coverage_metric.py  test_context_precision_metric.py  test_context_recall_metric.py  test_context_relevance_metric.py  test_decomposition_helpers.py  test_faithfulness_metric.py  test_metric_logic.py  test_registry.py
