[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "evalf"
version = "0.1.0"
description = "A lightweight OSS library to evaluate RAG systems with LLM-as-a-Judge."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Hoang" }
]
keywords = ["rag", "evaluation", "llm", "judge", "cli"]
dependencies = [
  "httpx>=0.27.0",
  "openai>=1.75.0",
  "pydantic>=2.8.0",
  "pytest>=9.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
evalf = "evalf.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["evalf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
